--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,2 @@
-body {
-  background-color: blanchedalmond;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
