Style hero area

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,35 @@ body {
   padding: 3rem 1rem;
 }
 
+/* ----------- Header ------------ */
+
+.header-container {
+  background-color: #ac3763;
+  border-bottom: 2px solid #fff;
+}
+
+.header-contents {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-contents p {
+  color: #fff;
+  font-weight: bold;
+}
+
+.header-icons {
+  display: flex;
+}
+
+.header-icon {
+  padding: 10px;
+}
+
+button {
+  background-color: #ac3763;
+  border: 1px solid #ac3763;
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+}
