--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 * {
   box-sizing: border-box;
   font-family: 'Montserrat', 'Roboto Slab', sans-serif;
+  font-size: 16px;
 }
 
 body {
-  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +19,7 @@ body {
   overflow-x: hidden;
 }
 
-.app {
+.App {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -40,11 +40,21 @@ body {
 .header-contents {
   display: flex;
   justify-content: space-between;
+  padding: 1rem;
 }
 
 .header-contents p {
   color: #fff;
   font-weight: bold;
+}
+
+.back-button {
+  font-size: 1.2rem;
+}
+
+.logo-button {
+  font-size: 1.5rem;
+  font-weight: 800;
 }
 
 .header-icons {
@@ -61,4 +71,79 @@ button {
   color: #fff;
   font-weight: 700;
   cursor: pointer;
+}
+
+/* ------- homePage--------- */
+
+.deaths-filter {
+  background-color: #fa498d;
+  border-bottom: 2px solid #fff;
+  padding: 3px 0;
+  color: #fff;
+}
+
+.countries-container {
+  background-color: #ac3763;
+  display: grid;
+  grid-template-rows: repeat(98, 10rem);
+  grid-template-columns: 50% 50%;
+  grid-auto-flow: row;
+}
+
+.country-card:nth-child(4n) {
+  background-color: #fa498d;
+}
+
+.country-card:nth-child(4n - 3) {
+  background-color: #fa498d;
+}
+
+.country-card:nth-child(8n - 7) {
+  background-color: #fa498d;
+}
+
+a.country-card {
+  text-decoration: none;
+}
+
+.country-link h2 {
+  font-size: 18px;
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  margin: 5px 10px;
+}
+
+.country-link p {
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  margin: 15px 10px;
+}
+
+/* --------------- CountryInfo -------- */
+
+.country-container {
+  background-color: #fa498d;
+  min-height: 100vh;
+  width: 37.5rem;
+}
+
+.country-details h2 {
+  text-align: center;
+  font-weight: 900;
+  font-size: 24px;
+  color: #fff;
+}
+
+.country-details p {
+  text-align: center;
+  color: #fff;
+  font-weight: 700;
+  padding: 15px 0;
+  margin: 0;
+}
+
+.country-details p:nth-child(2n) {
+  background-color: #ac3763;
 }
