--- a/src/App.css
+++ b/src/App.css
@@ -78,8 +78,12 @@ button {
 .deaths-filter {
   background-color: #fa498d;
   border-bottom: 2px solid #fff;
-  padding: 3px 0;
+  padding: 3px 8px;
   color: #fff;
+}
+
+.deaths-filter input {
+  border-radius: 4px;
 }
 
 .countries-container {
@@ -103,7 +107,14 @@ button {
 }
 
 a.country-card {
+  position: relative;
   text-decoration: none;
+}
+
+.country-link {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .country-link h2 {
